force-app/main/default/objects/UpdateShippingCarrierServiceLevel__c/UpdateShippingCarrierServiceLevel__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>UpdateShippingCarrierServiceLevel</label>
</CustomObject>