force-app/main/default/objects/UpdateShippingCarrierServiceLevel__c/fields/OrderServiceLevel__c.field-meta.xml
<CustomField>
    <fullName>OrderServiceLevel__c</fullName>
    <label>OrderServiceLevel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>