force-app/main/default/objects/UpdateShippingCarrierServiceLevel__c/fields/OrderShippingCarrier__c.field-meta.xml
<CustomField>
    <fullName>OrderShippingCarrier__c</fullName>
    <label>OrderShippingCarrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>