force-app/main/default/objects/UpdateShippingCarrierServiceLevel__c/fields/RMAServiceType__c.field-meta.xml
<CustomField>
    <fullName>RMAServiceType__c</fullName>
    <label>RMAServiceType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>