force-app/main/default/objects/UpdateShippingCarrierServiceLevel__c/fields/SCAC__c.field-meta.xml
<CustomField>
    <fullName>SCAC__c</fullName>
    <label>SCAC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>