force-app/main/default/objects/UpdateShippingCarrierServiceLevel__c/listViews/My_view_CP.listView-meta.xml
<ListView>
    <fullName>My_view_CP</fullName>
    <columns>NAME</columns>
    <columns>SCAC__c</columns>
    <columns>RMAServiceType__c</columns>
    <columns>OrderServiceLevel__c</columns>
    <columns>OrderShippingCarrier__c</columns>
    <columns>Shipping_Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RMAServiceType__c</field>
        <operation>equals</operation>
        <value>Next Business Day: 10:30am</value>
    </filters>
    <label>My view_CP</label>
</ListView>